@@ -28,6 +28,7 @@ ats-lang-anairiats-0.2.2:
 21. Clearing up libc/pthread and libc/pthread_uplock
 22. Implementing lib/pthread_upbarr
 23. Incorporating [parcomb] into $ATSHOME/contrib
+24. Adding libc/sys/resource, which corresponds to sys/resource.h
 
 ########################################################################
 
